@@ -8,8 +8,8 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import java.util.Arrays;
 import java.util.List;
 
+import com.subskill.models.MicroSkill;
 import com.subskill.models.Profession;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -18,7 +18,6 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.subskill.dto.MicroSkillDto;
 import com.subskill.models.Technology;
 import com.subskill.repository.MicroSkillRepository;
 import com.subskill.repository.TechnologyRepository;
@@ -26,10 +25,10 @@ import com.subskill.service.MicroSkillService;
 import com.subskill.service.TechnologyService;
 
 @WebMvcTest(TechnologyController.class)
-public class SubSkillTechologyControllerTest {
+public class SubSkillTechnologyControllerTest {
 
     @MockBean
-    TechnologyService technologeService;
+    TechnologyService technologyService;
 
     @MockBean
     MicroSkillRepository microSkillRepository;
@@ -48,14 +47,14 @@ public class SubSkillTechologyControllerTest {
     private static final String TECHNOLOGY_NAME_1 = "About Java";
     private static final String TECHNOLOGY_NAME_2 = "About C++";
 
-    private static final long TECHNOLOGY_ID_1 = 123124l;
-    private static final long TECHNOLOGY_ID_2 = 876512l;
+    private static final long TECHNOLOGY_ID_1 = 123124L;
+    private static final long TECHNOLOGY_ID_2 = 876512L;
 
 
     @Test
-    void testGetAllTechnologes() throws Exception {
-        List<String> nameOfTechnologyList = Arrays.asList(TECHNOLOGY_NAME_1, TECHNOLOGY_NAME_2);
-        when(technologeService.getAllTechnology()).thenReturn(nameOfTechnologyList);
+    void testGetAllTechnologies() throws Exception {
+        List<Technology> expectedTechnologyList = List.of(new Technology(TECHNOLOGY_ID_1, TECHNOLOGY_NAME_1, new Profession(), List.of(new MicroSkill())));
+        when(technologyService.getAllTechnology()).thenReturn(expectedTechnologyList);
 
         String actualJSON = mockMvc.perform(get("/api/v1/technology/all").contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
@@ -63,15 +62,17 @@ public class SubSkillTechologyControllerTest {
                 .getResponse()
                 .getContentAsString();
 
-        List<String> actualArticlesList = Arrays.asList(mapper.readValue(actualJSON, String[].class));
-        assertEquals(nameOfTechnologyList, actualArticlesList);
+        List<Technology> actualTechnologyList = Arrays.asList(mapper.readValue(actualJSON, Technology[].class));
+        assertEquals(expectedTechnologyList, actualTechnologyList);
     }
+
 
     @Test
     void testGetTechnologyById() throws Exception {
-        Technology expectedTechology = new Technology(TECHNOLOGY_ID_1, TECHNOLOGY_NAME_1, new Profession(), microSkillRepository.findByViews(76766l));
-        String jsonExpected = mapper.writeValueAsString(expectedTechology);
-        when(technologeService.getByID(TECHNOLOGY_ID_1)).thenReturn(expectedTechology);
+        Technology expectedTechnology = new Technology(TECHNOLOGY_ID_1, TECHNOLOGY_NAME_1,
+                new Profession(), microSkillRepository.findByViews(76766L));
+        String jsonExpected = mapper.writeValueAsString(expectedTechnology);
+        when(technologyService.getByID(TECHNOLOGY_ID_1)).thenReturn(expectedTechnology);
         String actualJSON = mockMvc.perform(get("/api/v1/technology/id/" + TECHNOLOGY_ID_1))
                 .andExpect(status().isOk())
                 .andReturn()
@@ -83,10 +84,10 @@ public class SubSkillTechologyControllerTest {
 
     @Test
     void testGetTechnologyByName() throws Exception {
-    	
-    	Technology expectedTechnology = new Technology(TECHNOLOGY_ID_1, TECHNOLOGY_NAME_1, new Profession(), microSkillRepository.findByViews(76766L));
+
+        Technology expectedTechnology = new Technology(TECHNOLOGY_ID_1, TECHNOLOGY_NAME_1, new Profession(), microSkillRepository.findByViews(76766L));
         String jsonExpected = mapper.writeValueAsString(expectedTechnology);
-        when(technologeService.getByName(TECHNOLOGY_NAME_1)).thenReturn(expectedTechnology);
+        when(technologyService.getByName(TECHNOLOGY_NAME_1)).thenReturn(expectedTechnology);
         String actualJSON = mockMvc.perform(get("/api/v1/technology/name/" + TECHNOLOGY_NAME_1).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andReturn()
@@ -94,24 +95,25 @@ public class SubSkillTechologyControllerTest {
                 .getContentAsString();
         assertEquals(jsonExpected, actualJSON);
     }
-//    @Test
-//    void testGetByProfessionName() throws Exception {
-//        Profession profession = new Profession("QA", );
-//        Technology technology_1 = new Technology(TECHNOLOGY_ID_1, TECHNOLOGY_NAME_1, profession, microSkillRepository.findByViews(76766L));
-//        Technology technology_2 = new Technology(TECHNOLOGY_ID_2, TECHNOLOGY_NAME_2, profession, microSkillRepository.findByViews(71231L));
-//        List<Technology> expectedTechnologyList = Arrays.asList(technology_1, technology_2);
-//
-//        when(technologeService.getByProfessionName("QA")).thenReturn(expectedTechnologyList);
-//
-//        String actualJSON = mockMvc.perform(get("/api/v1/technology/professional/QA").contentType(MediaType.APPLICATION_JSON))
-//                .andExpect(status().isOk())
-//                .andReturn()
-//                .getResponse()
-//                .getContentAsString();
-//
-//        List<Technology> actualTechnologyList = Arrays.asList(mapper.readValue(actualJSON, Technology[].class));
-//        assertEquals(expectedTechnologyList, actualTechnologyList);
-//}
+
+    @Test
+    void testGetByProfessionName() throws Exception {
+        Profession profession = new Profession(1L, "QA", List.of());
+        Technology technology_1 = new Technology(TECHNOLOGY_ID_1, TECHNOLOGY_NAME_1, profession, microSkillRepository.findByViews(76766L));
+        Technology technology_2 = new Technology(TECHNOLOGY_ID_2, TECHNOLOGY_NAME_2, profession, microSkillRepository.findByViews(71231L));
+        List<Technology> expectedTechnologyList = Arrays.asList(technology_1, technology_2);
+
+        when(technologyService.getByProfessionName("QA")).thenReturn(expectedTechnologyList);
+
+        String actualJSON = mockMvc.perform(get("/api/v1/technology/profession/QA").contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andReturn()
+                .getResponse()
+                .getContentAsString();
+
+        List<Technology> actualTechnologyList = Arrays.asList(mapper.readValue(actualJSON, Technology[].class));
+        assertEquals(expectedTechnologyList, actualTechnologyList);
+    }
 
 }
 
